tests/baselines/reference/functionTypeArgumentAssignmentCompat.errors.txt
tests/cases/compiler/functionTypeArgumentAssignmentCompat.ts(9,1): error TS2322: Type '<S>() => S[]' is not assignable to type '<T>(x: T) => T'.
  Type '{}[]' is not assignable to type 'T'.


==== tests/cases/compiler/functionTypeArgumentAssignmentCompat.ts (1 errors) ====
    var f : {
     <T>(x:T): T;
    }
    
    var g : {
     <S>() : S[];
    } = () => [];
    
    f = g;
    ~
!!! error TS2322: Type '<S>() => S[]' is not assignable to type '<T>(x: T) => T'.
!!! error TS2322:   Type '{}[]' is not assignable to type 'T'.
    var s = f("str").toUpperCase();
    
    console.log(s);
    